--- a/GreenBowlFoodsSystem/Views/ProductionBatches/Details.cshtml
+++ b/GreenBowlFoodsSystem/Views/ProductionBatches/Details.cshtml
@@ -74,7 +74,7 @@
                 <div class="mb-4 text-start">
                     <div class="text-white">
                     <small class="text-white text-uppercase fw-bold">Supervisor: </small>
-                        <i class="bi bi-person-badge-fill me-0"></i> @Model.Supervisor!.Username
+                        <i class="bi bi-person-badge-fill text-info me-0"></i> @Model.Supervisor!.UserName
                     </div>
                 </div>
 
