--- a/GreenBowlFoodsSystem/Views/XRayChecks/Details.cshtml
+++ b/GreenBowlFoodsSystem/Views/XRayChecks/Details.cshtml
@@ -53,7 +53,7 @@
                         <ul class="list-unstyled text-white">
                             <li class="mb-2">
                                 <i class="bi bi-person-badge text-info me-2"></i>
-                                <span class="fw-bold">Operator:</span> @Model.Operator?.Username
+                                <span class="fw-bold">Operator:</span> @Model.Operator?.UserName
                             </li>
                             <li>
                                 <i class="bi bi-clock-history text-info me-2"></i>
