--- a/GreenBowlFoodsSystem/Views/XRayChecks/Index.cshtml
+++ b/GreenBowlFoodsSystem/Views/XRayChecks/Index.cshtml
@@ -106,7 +106,7 @@ else
 
                         <div>
                             <small class="text-info" style="font-size: 0.7rem;">
-                                Inspector: <span class="text-white">@item.Operator?.Username</span>
+                                Inspector: <span class="text-white">@item.Operator?.UserName</span>
                             </small>
                         </div>
                     </div>
