--- a/GreenBowlFoodsSystem/Views/Account/Login.cshtml
+++ b/GreenBowlFoodsSystem/Views/Account/Login.cshtml
@@ -25,13 +25,13 @@
 
                 <form asp-action="Login" method="post">
                     <div class="form-group mb-4">
-                        <label for="username" class="form-label">Username</label>
-                        <input type="text" name="username" class="form-control" placeholder="admin" required />
+                        <label for="Email" class="form-label">Email</label>
+                        <input type="email" name="Email" class="form-control" placeholder="name@greenbowl.com" required />
                     </div>
 
                     <div class="form-group mb-4">
-                        <label for="password" class="form-label">Password</label>
-                        <input type="password" name="password" class="form-control" placeholder="••••••••" required />
+                        <label for="Password" class="form-label">Password</label>
+                        <input type="Password" name="Password" class="form-control" placeholder="••••••••" required />
                     </div>
 
                     <div class="d-grid gap-2 pt-2">
