--- a/GreenBowlFoodsSystem/Views/ProductionBatches/Index.cshtml
+++ b/GreenBowlFoodsSystem/Views/ProductionBatches/Index.cshtml
@@ -66,7 +66,7 @@
                             <td>
                                 <div class="d-flex align-items-center text-white">
                                     <i class="bi bi-person-circle me-2 text-info"></i>
-                                    @Html.DisplayFor(modelItem => item.Supervisor!.Username)
+                                    @Html.DisplayFor(modelItem => item.Supervisor!.UserName)
                                 </div>
                             </td>
                             <td class="text-end pe-4">
