--- a/GreenBowlFoodsSystem/Views/XRayChecks/Delete.cshtml
+++ b/GreenBowlFoodsSystem/Views/XRayChecks/Delete.cshtml
@@ -42,7 +42,7 @@
                     </div>
                     <div class="d-flex justify-content-between mb-2">
                         <span class="text-white">Inspector:</span>
-                        <span class="text-white">@Model.Operator?.Username</span>
+                        <span class="text-white">@Model.Operator?.UserName</span>
                     </div>
                     <div class="d-flex justify-content-between">
                         <span class="text-white">Report ID:</span>
